validate/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: host-port
spec:
  securityContext:
    runAsNonRoot: true
  containers: 
  - name: host-port
    image: kubernetes/pause
    ports:
    - containerPort: 80
      hostPort: 80
