validate/disallow_host_port.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-host-port
  annotations:
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Access to host port 80 is forbidden.
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: host-ports
      match:
        resources:
          kinds:
            - Pod
      validate:
        message: >-
          Use of host port 80 is disallowed. The fields spec.containers[*].ports[*].hostPort
          and spec.initContainers[*].ports[*].hostPort must not be 80.
        pattern:
          spec:
            =(initContainers):
              - =(ports):
                  - X(hostPort): 80
            containers:
              - =(ports):
                  - X(hostPort): 80
